--- a/MyUnityProject/Assembly-CSharp.csproj
+++ b/MyUnityProject/Assembly-CSharp.csproj
@@ -61,9 +61,11 @@
     <Compile Include="Assets\Wireframe\Examples\Scripts\AutoRotate.cs" />
     <Compile Include="Assets\Scripts\Math.cs" />
     <Compile Include="Assets\Scripts\ShowFPS.cs" />
+    <Compile Include="Assets\Scripts\DrawStlMesh.cs" />
     <Compile Include="Assets\Wireframe\ImageEffect\WireframeImageEffect.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\CameraController.cs" />
+    <Compile Include="Assets\Scripts\ExportModelToSTL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Wireframe\Shaders\WireframeTransparent.shader" />
